--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,14 +1,38 @@
-<ion-header>
-  <ion-navbar>
-    <ion-title>
-      Ionic Blank
-    </ion-title>
-  </ion-navbar>
-</ion-header>
+<ion-content>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+  <ion-grid>
+    <ion-row>
+      <ion-col col-4 text-center>
+        <div class="rounded-border" (click)="goToOtherPage()">
+          <ion-icon name="settings"></ion-icon>
+          <p>Settings</p>
+        </div>
+      </ion-col>
+      <ion-col col-4 text-center>
+        <ion-icon name="images"></ion-icon>
+        <p>Gallery</p>
+      </ion-col>
+      <ion-col col-4 text-center>
+        <ion-icon name="list-box"></ion-icon>
+        <p>Tasks</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-4 push-4 text-center>
+        <ion-icon name="globe"></ion-icon>
+        <p>Browser</p>
+      </ion-col>
+    </ion-row>
+    <ion-row>
+      <ion-col col-4 push-2 text-center>
+        <ion-icon name="call"></ion-icon>
+        <p>Phone</p>
+      </ion-col>
+      <ion-col col-4 push-2 text-center>
+        <ion-icon name="text"></ion-icon>
+        <p>Messages</p>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
+
 </ion-content>
