- add 'badge' component to notify that the game has new notifications in the users OS - add 'fake' badges to the home page

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -11,12 +11,14 @@
       <ion-col col-4 text-center>
         <div tappable class="icon-container" (click)="goToPage('GalleryPage')">
           <ion-icon name="images"></ion-icon>
+          <ion-badge item-end>3</ion-badge>
           <p>Gallery</p>
         </div>
       </ion-col>
       <ion-col col-4 text-center>
         <div tappable class="icon-container" (click)="goToPage('TasksPage')">
           <ion-icon name="list-box"></ion-icon>
+          <ion-badge item-end>12</ion-badge>
           <p>Tasks</p>
         </div>
       </ion-col>
@@ -39,6 +41,7 @@
       <ion-col col-4 push-2 text-center>
         <div tappable class="icon-container" (click)="goToPage('MessagesPage')">
           <ion-icon name="text"></ion-icon>
+          <ion-badge item-end>3</ion-badge>
           <p>Messages</p>
         </div>
       </ion-col>
