- add settings test Card, Card Header, Toggles

--- a/src/pages/settings/settings.html
+++ b/src/pages/settings/settings.html
@@ -6,9 +6,20 @@
   </ion-navbar>
 </ion-header>
 
-<ion-content padding>
-  The world is your oyster.
-  <p>
-    If you get lost, the <a href="http://ionicframework.com/docs/v2">docs</a> will be your guide.
-  </p>
+<ion-content>
+  <ion-card>
+    <ion-card-header>
+      Notifications
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label>Sound On</ion-label>
+        <ion-toggle checked="true"></ion-toggle>
+      </ion-item>
+      <ion-item>
+        <ion-label>Push Notifications On</ion-label>
+        <ion-toggle checked="true"></ion-toggle>
+      </ion-item>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
